--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build:aio.min": "cross-env NODE_ENV=production npm run build:aio",
     "build": "npm run clean && npm run build:self && npm run build:esm && npm run build:aio && npm run build:aio.min",
     "test": "npm run lint && cross-env NODE_ENV=test nyc mocha",
-    "test:some": "cross-env NODE_ENV=test nyc mocha ./test/idcard.test.js",
+    "test:some": "cross-env NODE_ENV=test nyc mocha ./test/exchangeCoordinates.test.js",
     "release": "npn test && npm run build && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags"
   },
   "author": "SFTC",
