--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build": "npm run clean && npm run build:self && npm run build:esm && npm run build:aio && npm run build:aio.min",
     "test": "npm run lint && cross-env NODE_ENV=test nyc mocha",
     "test:some": "cross-env NODE_ENV=test nyc mocha ./test/exchangeCoordinates.test.js",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "release": "npn test && npm run build && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags"
   },
   "author": "SFTC",
