--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/preset-env": "^7.1.0",
     "@babel/register": "7.0.0",
     "babel-plugin-istanbul": "5.1.0",
+    "coveralls": "^3.0.3",
     "cross-env": "5.2.0",
     "es5-shim": "4.5.10",
     "eslint": "4.18.2",
