--- a/package.json
+++ b/package.json
@@ -42,13 +42,12 @@
     "eslint": "4.18.2",
     "eslint-plugin-html": "^5.0.3",
     "expect.js": "0.3.1",
-    "growl": "^1.10.5",
-    "mocha": "3.5.3",
-    "mocha-jsdom": "^2.0.0",
+    "mocha": "4.1.0",
+    "mocha-jsdom": "2.0.0",
     "nyc": "13.1.0",
     "rimraf": "2.6.2",
     "rollup": "0.57.1",
-    "rollup-plugin-babel": "^4.0.3",
+    "rollup-plugin-babel": "4.0.3",
     "rollup-plugin-commonjs": "8.3.0",
     "rollup-plugin-copy": "^0.2.3",
     "rollup-plugin-node-resolve": "3.0.3",
