--- a/package.json
+++ b/package.json
@@ -6,6 +6,14 @@
   "jsnext:main": "dist/index.esm.js",
   "module": "dist/index.esm.js",
   "sideEffects": false,
+  "files": [
+    "dist"
+  ],
+  "keywords": [
+    "Javascript",
+    "js",
+    "js-lib"
+  ],
   "scripts": {
     "clean": "rimraf ./dist",
     "lint": "eslint -c .eslintrc.js src/**.js",
@@ -16,7 +24,7 @@
     "build:aio.min": "cross-env NODE_ENV=production npm run build:aio",
     "build": "npm run clean && npm run build:self && npm run build:esm && npm run build:aio && npm run build:aio.min",
     "test": "npm run lint && cross-env NODE_ENV=test nyc mocha",
-    "test:some": "cross-env NODE_ENV=test nyc mocha ./test/exchangeCoordinates.test.js",
+    "test:some": "cross-env NODE_ENV=test nyc mocha ./test/deepCopy.test.js",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "release": "npn test && npm run build && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags"
   },
@@ -44,7 +52,7 @@
     "expect.js": "0.3.1",
     "mocha": "4.1.0",
     "mocha-jsdom": "2.0.0",
-    "nyc": "13.1.0",
+    "nyc": "^14.0.0",
     "rimraf": "2.6.2",
     "rollup": "0.57.1",
     "rollup-plugin-babel": "4.0.3",
@@ -59,6 +67,7 @@
     "dayjs": "^1.8.12",
     "emoji-regex": "^8.0.0",
     "is": "^3.3.0",
+    "lodash.clonedeep": "^4.5.0",
     "number-precision": "^1.3.1"
   }
 }
