--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "eslint": "4.18.2",
     "eslint-plugin-html": "^5.0.3",
     "expect.js": "0.3.1",
-    "mocha": "4.1.0",
+    "mocha": "^6.1.4",
     "mocha-jsdom": "2.0.0",
     "nyc": "^14.0.0",
     "rimraf": "2.6.2",
