--- a/.npmignore
+++ b/.npmignore
@@ -1,17 +1,7 @@
+*.d.ts
+!index.d.ts
+.rpt2_cache
+coverage
 node_modules
-config
-demo
-src
-test
-.babelrc
-.editorconfig
-.eslintrc.js
-.travis.yml
-.istanbul.yml
-CHANGELOG.md
-CHANGELOG.zh-CN.md
-package-lock.json
-rename.js
-TODO.md
-tsconfig.json
-tslint.json
+dist
+.nyc_output
