--- a/package.json
+++ b/package.json
@@ -1,92 +1,63 @@
 {
   "name": "better-js-lib",
-  "version": "1.0.0",
-  "description": "更好用的 `JS|TS` 业务函数库",
+  "version": "0.1.0",
+  "description": "jslib最好用的js库脚手架",
   "main": "dist/index.js",
   "jsnext:main": "dist/index.esm.js",
   "module": "dist/index.esm.js",
   "sideEffects": false,
-  "srctype": "ts",
-  "files": [
-    "dist"
-  ],
-  "keywords": [
-    "Javascript",
-    "js",
-    "js-lib"
-  ],
   "scripts": {
-    "rename": "node rename.js",
     "clean": "rimraf ./dist",
-    "lint": "tslint -c tslint.json src/ts/*.ts",
+    "test": "npm run lint && nyc mocha",
+    "release": "npm test && npm run build && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags",
+    "lint": "eslint -c .eslintrc.js 'src/**/*.ts'",
+    "lint:fix": "eslint -c .eslintrc.js 'src/**/*.ts' --fix",
     "build:self": "rollup -c config/rollup.config.js",
     "build:esm": "rollup -c config/rollup.config.esm.js",
     "build:aio": "rollup -c config/rollup.config.aio.js",
     "build:aio.min": "cross-env NODE_ENV=production npm run build:aio",
     "build": "npm run clean && npm run build:self && npm run build:esm && npm run build:aio && npm run build:aio.min",
-    "test": "npm run lint && nyc --nycrc-path .nycrc-ts mocha",
-    "test:some": "nyc --nycrc-path .nycrc-ts mocha ./test/check.test.js",
-    "coveralls": "nyc --nycrc-path .nycrc-ts report --reporter=text-lcov | coveralls",
-    "release": "npn test && npm run build && git commit -am $npm_package_version && git push && git tag $npm_package_version && git push --tags"
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
-  "scripts:js": {
-    "clean": "rimraf ./dist",
-    "lint": "eslint -c .eslintrc.js src/**.js",
-    "lint:fix": "eslint --fix -c .eslintrc.js src/**.js",
-    "build:self": "rollup -c config/rollup.config.js",
-    "build:esm": "rollup -c config/rollup.config.esm.js",
-    "build:aio": "rollup -c config/rollup.config.aio.js",
-    "build:aio.min": "cross-env NODE_ENV=production npm run build:aio",
-    "build": "npm run clean && npm run build:self && npm run build:esm && npm run build:aio && npm run build:aio.min",
-    "test": "npm run lint && cross-env NODE_ENV=test nyc mocha",
-    "test:some": "cross-env NODE_ENV=test nyc mocha ./test/deepCopy.test.js",
-    "coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "release": "npm test && npm run build && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags"
-  },
-  "author": "SFTC",
+  "author": "bluescurry",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/SFTC/better-js-lib"
+    "url": "git://github.com/bluescurry/better-js-lib.git"
   },
   "bugs": {
-    "url": "https://github.com/SFTC/better-js-lib/issues"
+    "url": "https://github.com/bluescurry/better-js-lib/issues"
+  },
+  "files": [
+    "/dist",
+    "*.d.ts"
+  ],
+  "engines": {
+    "node": ">= 0.12.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.1.5",
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
-    "@babel/register": "7.0.0",
-    "babel-plugin-istanbul": "5.1.0",
-    "coveralls": "^3.0.3",
+    "@js-lib/cli": "^1.6.0",
     "cross-env": "5.2.0",
-    "es5-shim": "4.5.10",
-    "eslint": "4.18.2",
-    "eslint-plugin-html": "^5.0.3",
-    "expect.js": "0.3.1",
-    "mocha": "4.1.0",
-    "mocha-jsdom": "2.0.0",
-    "nyc": "^14.0.0",
     "rimraf": "2.6.2",
-    "rollup": "1.10.1",
-    "rollup-plugin-babel": "4.3.2",
+    "es5-shim": "4.5.10",
+    "eslint": "^5.15.1",
+    "@typescript-eslint/eslint-plugin": "^1.4.2",
+    "@typescript-eslint/parser": "^1.4.2",
+    "rollup": "0.57.1",
+    "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "8.3.0",
-    "rollup-plugin-copy": "^0.2.3",
     "rollup-plugin-node-resolve": "3.0.3",
-    "rollup-plugin-typescript2": "^0.21.0",
-    "rollup-plugin-uglify": "^6.0.2",
-    "source-map-support": "^0.5.9",
-    "ts-node": "^8.1.0",
-    "tslint": "^5.16.0",
-    "typescript": "^3.4.5"
+    "rollup-plugin-typescript2": "0.18.0",
+    "rollup-plugin-uglify": "1.0.0",
+    "ts-node": "7.0.1",
+    "tslib": "1.9.3",
+    "typescript": "3.3.3333",
+    "babel-plugin-istanbul": "5.1.0",
+    "coveralls": "3.0.2",
+    "expect.js": "0.3.1",
+    "mocha": "3.5.3",
+    "nyc": "13.1.0",
+    "source-map-support": "0.5.9"
   },
-  "dependencies": {
-    "@babel/runtime": "^7.1.2",
-    "dayjs": "^1.8.12",
-    "emoji-regex": "^8.0.0",
-    "is": "^3.3.0",
-    "lodash.clonedeep": "^4.5.0",
-    "number-precision": "^1.3.1"
-  }
+  "dependencies": {}
 }
