--- a/package.json
+++ b/package.json
@@ -37,27 +37,32 @@
   },
   "devDependencies": {
     "@js-lib/cli": "^1.6.0",
-    "cross-env": "5.2.0",
-    "rimraf": "2.6.2",
-    "es5-shim": "4.5.10",
-    "eslint": "^5.15.1",
+    "@types/lodash.clonedeep": "^4.5.6",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
     "@typescript-eslint/parser": "^1.4.2",
+    "babel-plugin-istanbul": "5.1.0",
+    "coveralls": "3.0.2",
+    "cross-env": "5.2.0",
+    "es5-shim": "4.5.10",
+    "eslint": "^5.15.1",
+    "eslint-plugin-html": "^6.0.3",
+    "expect.js": "0.3.1",
+    "mocha": "3.5.3",
+    "nyc": "13.1.0",
+    "rimraf": "2.6.2",
     "rollup": "0.57.1",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "8.3.0",
     "rollup-plugin-node-resolve": "3.0.3",
     "rollup-plugin-typescript2": "0.18.0",
     "rollup-plugin-uglify": "1.0.0",
+    "source-map-support": "0.5.9",
     "ts-node": "7.0.1",
     "tslib": "1.9.3",
-    "typescript": "3.3.3333",
-    "babel-plugin-istanbul": "5.1.0",
-    "coveralls": "3.0.2",
-    "expect.js": "0.3.1",
-    "mocha": "3.5.3",
-    "nyc": "13.1.0",
-    "source-map-support": "0.5.9"
+    "typescript": "3.3.3333"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lodash.clonedeep": "^4.5.0",
+    "number-precision": "^1.5.0"
+  }
 }
