提交所有ts方法

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "declaration": true,
         "declarationDir": ".",
         "esModuleInterop": true,
+        "resolveJsonModule": true,
     },
     "include": [
         "src/**/*.ts"
