--- a/package.json
+++ b/package.json
@@ -54,16 +54,19 @@
     "rollup": "0.57.1",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "8.3.0",
+    "rollup-plugin-copy": "^3.3.0",
+    "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "3.0.3",
     "rollup-plugin-typescript2": "0.18.0",
     "rollup-plugin-uglify": "1.0.0",
     "source-map-support": "0.5.9",
     "ts-node": "7.0.1",
     "tslib": "1.9.3",
-    "typescript": "3.3.3333"
+    "typescript": "^3.9.7"
   },
   "dependencies": {
     "dayjs": "^1.8.33",
+    "emoji-regex": "^9.0.0",
     "is_js": "^0.9.0",
     "lodash.clonedeep": "^4.5.0",
     "number-precision": "^1.5.0"
