--- a/.nycrc
+++ b/.nycrc
@@ -5,6 +5,7 @@
   "functions": 0,
   "branches": 75,
   "require": [
+    "@babel/register",
     "ts-node/register",
     "source-map-support/register"
   ],
