--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "node": ">= 0.12.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.4",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/register": "^7.10.5",
     "@js-lib/cli": "^1.6.0",
     "@types/is": "0.0.21",
     "@types/lodash.clonedeep": "^4.5.6",
@@ -49,6 +52,7 @@
     "eslint-plugin-html": "^6.0.3",
     "expect.js": "0.3.1",
     "mocha": "3.5.3",
+    "mocha-jsdom": "^2.0.0",
     "nyc": "13.1.0",
     "rimraf": "2.6.2",
     "rollup": "0.57.1",
@@ -57,17 +61,17 @@
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "3.0.3",
-    "rollup-plugin-typescript2": "0.18.0",
-    "rollup-plugin-uglify": "1.0.0",
+    "rollup-plugin-typescript2": "^0.18.1",
+    "rollup-plugin-uglify": "^6.0.4",
     "source-map-support": "0.5.9",
     "ts-node": "7.0.1",
     "tslib": "1.9.3",
-    "typescript": "3.3.3333"
+    "typescript": "^3.9.7"
   },
   "dependencies": {
     "dayjs": "^1.8.33",
     "emoji-regex": "^9.0.0",
-    "is_js": "^0.9.0",
+    "is": "^3.3.0",
     "lodash.clonedeep": "^4.5.0",
     "number-precision": "^1.5.0"
   }
