更新rollup打包方式

--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "release": "npm test && npm run build && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags",
     "lint": "eslint -c .eslintrc.js 'src/**/*.ts'",
     "lint:fix": "eslint -c .eslintrc.js 'src/**/*.ts' --fix",
+    "tsc": "tsc --outDir dist/lib --declarationDir dist/types --declaration true",
     "build:self": "rollup -c config/rollup.config.js",
     "build:esm": "rollup -c config/rollup.config.esm.js",
     "build:aio": "rollup -c config/rollup.config.aio.js",
     "build:aio.min": "cross-env NODE_ENV=production npm run build:aio",
-    "build": "npm run clean && npm run build:self && npm run build:esm && npm run build:aio && npm run build:aio.min",
+    "build": "npm run clean && npm run tsc && npm run build:self && npm run build:esm && npm run build:aio && npm run build:aio.min",
     "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "author": "bluescurry",
@@ -38,8 +39,10 @@
   "devDependencies": {
     "@babel/core": "^7.11.4",
     "@babel/preset-env": "^7.11.0",
+    "@babel/preset-typescript": "^7.10.4",
     "@babel/register": "^7.10.5",
     "@js-lib/cli": "^1.6.0",
+    "@rollup/plugin-typescript": "^5.0.2",
     "@types/is": "0.0.21",
     "@types/lodash.clonedeep": "^4.5.6",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
@@ -55,17 +58,16 @@
     "mocha-jsdom": "^2.0.0",
     "nyc": "13.1.0",
     "rimraf": "2.6.2",
-    "rollup": "0.57.1",
+    "rollup": "^2.26.6",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "8.3.0",
-    "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "3.0.3",
-    "rollup-plugin-typescript2": "^0.18.1",
-    "rollup-plugin-uglify": "^6.0.4",
+    "rollup-plugin-terser": "^7.0.0",
+    "rollup-plugin-typescript2": "^0.27.2",
     "source-map-support": "0.5.9",
     "ts-node": "7.0.1",
-    "tslib": "1.9.3",
+    "tslib": "^2.0.1",
     "typescript": "^3.9.7"
   },
   "dependencies": {
