--- a/.npmignore
+++ b/.npmignore
@@ -1,8 +1,24 @@
+node_modules
+config
+demo
+src
+test
+coverage
+
 .DS_Store
 *.d.ts
+.nyc_output
 !index.d.ts
 .rpt2_cache
-coverage
-node_modules
-dist
-.nyc_output
+.babelrc
+.editorconfig
+.eslintrc.js
+.travis.yml
+.istanbul.yml
+CHANGELOG.md
+CHANGELOG.zh-CN.md
+package-lock.json
+rename.js
+TODO.md
+tsconfig.json
+tslint.json
