--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: node_js
 node_js:
-  - "12"
   - "10"
   - "8"
   - "6"
 after_success:
   - npm run coveralls
+cache:
+  directories:
+    - node_modules
