--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "better-js-lib",
-  "version": "0.1.0",
+  "version": "2.0.0",
   "description": "jslib最好用的js库脚手架",
   "main": "dist/index.js",
   "jsnext:main": "dist/index.esm.js",
   "module": "dist/index.esm.js",
   "sideEffects": false,
   "scripts": {
-    "clean": "rimraf ./dist",
+    "clean": "rimraf ./lib",
     "test": "npm run lint && nyc mocha",
     "release": "npm test && npm run build && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags",
     "lint": "eslint -c .eslintrc.js 'src/**/*.ts'",
@@ -17,8 +17,9 @@
     "build:esm": "rollup -c config/rollup.config.esm.js",
     "build:aio": "rollup -c config/rollup.config.aio.js",
     "build:aio.min": "cross-env NODE_ENV=production npm run build:aio",
-    "build": "npm run clean && npm run tsc && npm run build:self && npm run build:esm && npm run build:aio && npm run build:aio.min",
-    "coveralls": "nyc report --reporter=text-lcov | coveralls"
+    "build": "npm run clean && npm run build:self && npm run build:esm && npm run build:aio && npm run build:aio.min",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
+    "build:new": "npm run clean && rollup -c rollup.config.js"
   },
   "author": "bluescurry",
   "license": "MIT",
@@ -43,7 +44,6 @@
     "@babel/register": "^7.10.5",
     "@js-lib/cli": "^1.6.0",
     "@rollup/plugin-typescript": "^5.0.2",
-    "@types/is": "0.0.21",
     "@types/lodash.clonedeep": "^4.5.6",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
     "@typescript-eslint/parser": "^1.4.2",
@@ -61,8 +61,10 @@
     "rollup": "^2.26.6",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "8.3.0",
+    "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "3.0.3",
+    "rollup-plugin-sourcemaps": "^0.6.2",
     "rollup-plugin-terser": "^7.0.0",
     "rollup-plugin-typescript2": "^0.27.2",
     "source-map-support": "0.5.9",
