删除rollup旧的打包

--- a/package.json
+++ b/package.json
@@ -13,14 +13,8 @@
     "release": "npm test && npm run build && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags",
     "lint": "eslint -c .eslintrc.js 'src/**/*.ts'",
     "lint:fix": "eslint -c .eslintrc.js 'src/**/*.ts' --fix",
-    "tsc": "tsc --outDir dist/lib --declarationDir dist/types --declaration true",
-    "build:self": "rollup -c config/rollup.config.js",
-    "build:esm": "rollup -c config/rollup.config.esm.js",
-    "build:aio": "rollup -c config/rollup.config.aio.js",
-    "build:aio.min": "cross-env NODE_ENV=production npm run build:aio",
-    "build": "npm run clean && npm run build:self && npm run build:esm && npm run build:aio && npm run build:aio.min",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "build:new": "npm run clean && rollup -c rollup.config.js"
+    "build": "npm run clean && rollup -c rollup.config.js"
   },
   "author": "bluescurry",
   "license": "MIT",
