--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "better-js-lib",
-  "version": "2.0.5",
+  "version": "2.0.6",
   "description": "jslib最好用的js库脚手架",
   "main": "lib/index.js",
   "jsnext:main": "lib/index.esm.js",
@@ -58,6 +58,7 @@
     "rollup-plugin-commonjs": "8.3.0",
     "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-multi-input": "^1.1.1",
     "rollup-plugin-node-resolve": "3.0.3",
     "rollup-plugin-sourcemaps": "^0.6.2",
     "rollup-plugin-terser": "^7.0.0",
