--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@babel/preset-env": "^7.11.0",
     "@babel/register": "^7.10.5",
     "@js-lib/cli": "^1.6.0",
-    "@types/lodash.clonedeep": "^4.5.6",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
     "@typescript-eslint/parser": "^1.4.2",
     "babel-plugin-istanbul": "5.1.0",
@@ -72,6 +71,7 @@
     "dayjs": "^1.8.33",
     "emoji-regex": "^9.0.0",
     "lodash.clonedeep": "^4.5.0",
-    "number-precision": "^1.5.0"
+    "number-precision": "^1.5.0",
+    "@types/lodash.clonedeep": "^4.5.6"
   }
 }
