--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "better-js-lib",
-  "version": "2.0.9",
+  "version": "2.1.0",
   "description": "jslib最好用的js库脚手架",
   "main": "lib/index.js",
-  "jsnext:main": "lib/index.esm.js",
-  "module": "lib/index.esm.js",
+  "jsnext:main": "lib/index.js",
+  "module": "lib/index.js",
+  "typings": "lib/index.d.ts",
   "sideEffects": false,
   "scripts": {
     "clean": "rimraf ./lib",
@@ -69,7 +70,7 @@
   },
   "dependencies": {
     "@types/lodash.clonedeep": "^4.5.6",
-    "dayjs": "^1.8.33",
+    "dayjs": "^1.9.7",
     "emoji-regex": "^9.0.0",
     "lodash.clonedeep": "^4.5.0",
     "number-precision": "^1.5.0",
