--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "better-js-lib",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "description": "jslib最好用的js库脚手架",
   "main": "lib/index.js",
   "jsnext:main": "lib/index.js",
@@ -73,7 +73,9 @@
     "dayjs": "^1.9.7",
     "emoji-regex": "^9.0.0",
     "lodash.clonedeep": "^4.5.0",
-    "number-precision": "^1.5.0",
+    "number-precision": "^1.5.0"
+  },
+  "optionalDependencies": {
     "xlsx": "^0.16.9"
   }
 }
