--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "sideEffects": false,
   "scripts": {
     "clean": "rimraf ./lib",
-    "test:some": "cross-env NODE_ENV=test nyc mocha ./test/checkXlsx.test.js",
+    "test:some": "cross-env NODE_ENV=test nyc mocha ./test/is.test.js",
     "test": "npm run lint && nyc mocha",
     "release": "npm test && npm run build && git commit -am $npm_package_version && git tag $npm_package_version && git push && git push --tags",
     "lint": "eslint -c .eslintrc.js 'src/**/*.ts'",
