--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "better-js-lib",
-  "version": "2.2.1",
+  "version": "2.2.3",
   "description": "jslib最好用的js库脚手架",
   "main": "lib/index.js",
   "jsnext:main": "lib/index.js",
@@ -28,6 +28,7 @@
   },
   "files": [
     "/es",
+    "/lib",
     "*.d.ts"
   ],
   "engines": {
