--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git://github.com/bluescurry/better-js-lib.git"
+    "url": "https://github.com/SFTC/better-js-lib"
   },
   "bugs": {
-    "url": "https://github.com/bluescurry/better-js-lib/issues"
+    "url": "https://github.com/SFTC/better-js-lib/issues"
   },
   "files": [
     "/es",
